--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {	
   margin: 0;	
   padding: 0;	
-   font-family: font-family: 'PT Sans', Arial, sans-serif;	
+   font-family: 'PT Sans', Arial, sans-serif;	
   font-size: 14px;	
   line-height: 21px;	
   font-weight: 700;	
