--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ a {
 .catalog-item a {	
   color: #000000;	
 }	
- .catalog-item a {	
+ .appellation {	
   font-size: 21px;	
   line-height: 26px;	
 }	
