--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,9 @@ a {
 }	
  .catalog-item {	
   background-color: #f8f8f8;	
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);	
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-size: 14px;	
+  line-height: 21px;
 }	
 .catalog-item a {	
   color: #000000;	
