--- a/css/Style.css
+++ b/css/Style.css
@@ -1,165 +1,375 @@
-body {	
-  margin: 0;	
-  padding: 0;	
-   font-family: font-family: 'PT Sans', Arial, sans-serif;	
-  font-size: 14px;	
-  line-height: 21px;	
-  font-weight: 700;	
-  color: #333333;	
-  text-transform: uppercase;	
-  background-color: #ffffff;	
-}	
-a {	
-  text-decoration: none;	
-}	
-.site-navigation {	
-  font-size: 14px;	
-  line-height: 26px;	
-  color: #333333;	
-  	
-  background-color: #ffffff;	
-}	
-.navigation-list {	
-  list-style: none;	
-}	
-.navigation-list a {	
-  color: #333333;	
-}	
-.navigation-list a:hover,	
-.navigation-list a:focus {	
-  color: #99cccc;	
-}	
-.one-reason {	
-  text-align: center;	
-  color: #ffffff;	
-  background-color: #81b3d2;	
-}	
-.one-reason h3 {	
-  font-size: 21px;	
-  line-height: 21px;	
-}	
-.additional-advantage-list {	
-  list-style: none;	
-}	
-.additional-advantage-list {	
-  text-align: center;	
-  color: #333333;	
-}	
-.another-reasons-list {	
-  list-style: none;	
-  background-color: #ffffff;	
-}	
-.another-reasons-list {	
-  text-align: center;	
-  color: #333333;	
-}	
-.desire {	
-  text-align: center;	
-  color: #333333;	
-}	
-.desire-item input {	
-  font: inherit;	
-  background-color: #f2f2f2;	
-}	
-.desire-item input:hover {	
-  background-color: #ebebeb;	
-}	
-.desire-item input:focus {	
-  border-color: #e5e5e5;	
-}	
-.option-collating-list {	
-  list-style: none;	
-}	
-.option-collating-list a {	
-  color: #b2b2b2;	
-  text-decoration: underline;	
-}	
-.option-collating-list a:hover,	
-.option-collating-list a:focus {	
-  color: #89b8d5;	
-}	
-.option-collating-list a:active {	
-  color: #89b8d5;	
-  text-decoration: none;	
-}	
-.filter fieldset {	
-  border: none;	
-}	
-.filter legend {	
-  font-size: 16px;	
-  line-height: 21px;	
-}	
-.filter ul {	
-  list-style: none;	
-  line-height: 21px;	
-}	
-.filter-input:hover + label,	
-.filter-input:focus + label {	
-  color: #ffffff;	
-}	
- .filter-input:disabled + label {	
-  color: #6a6a6a;	
-   opacity: 0.5;	
-}	
-.catalog-list {	
-  list-style: none;	
-}	
- .catalog-item {	
-  background-color: #f8f8f8;	
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);	
-}	
-.catalog-item a {	
-  color: #000000;	
-}	
- .catalog-item a {	
-  font-size: 21px;	
-  line-height: 26px;	
-}	
-.catalog-item-kind {	
-  text-transform: none;	
-   font-size: 14px;	
-  line-height: 21px;	
-}	
-.catalog-item-price {	
-  font-size: 14px;	
-  line-height: 21px;	
-}	
-.catalog-item .button {	
-  font-size: 14px;	
-  line-height: 21px;	
-  color: #ffffff;	
-  background-color: #81b3d2;	
-}	
-.catalog-item .button-reservation {	
-  font-size: 14px;	
-  line-height: 21px;	
-  color: #ffffff;	
-  background-color: #766357;	
-}	
- .main-footer {	
-  color: #000000;	
-  	
-  background-color: #f9fbf6;	
-  background-position: 0 0;	
-  background-repeat: repeat;	
-}	
-.footer-social {	
-  text-align: center;	
-}	
- .footer-social ul {	
-  list-style: none;	
-}	
- .social-button {	
-  color: #000000;	
-}	
-.footer-copyright {	
-  text-align: center;	
-}	
-.footer-copyright a {	
-  color: #000000;	
-}	
- .footer-copyright .button:hover,	
-.footer-copyright .button:focus {	
-  color: #81b3d2;	
-   background-color: #ffffff;	
+body {
+  width: 768px;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', Arial, sans-serif;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 700;
+  color: #333333;
+  text-transform: uppercase;
+  background-color: #ffffff;
 }
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.main-header {
+  margin: 0;
+}
+
+.site-navigation {
+  width: 768px;
+  font-size: 14px;
+  line-height: 26px;
+  color: #333333;
+  background-color: transparent;
+  justify-content: space-between;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+}
+
+.main-header-logo {
+  position: absolute;
+  width: 140px;
+  height: 72px;
+  margin-right: auto;
+  margin-left: -69px;
+  padding-left: 8px;
+  padding-right: 8px;
+  top: 15px;
+  left: 50%;
+  z-index: 20
+    
+  /*position: absolute;
+  left: 50%;
+  z-index: 20;
+  width: 138px;
+  height: 70px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-left: -69px;*/
+}
+.navigation-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+  list-style: none; 
+}
+
+
+
+.navigation-list a {
+  display: block;
+  padding: 0;
+  margin: 0;
+
+  vertical-align: middle;
+  color: #333333;
+}
+
+.navigation-list a:hover,
+.navigation-list a:focus {
+  color: #99cccc;
+}
+
+.navigation-item:nth-child(1) {
+  min-width: 93px;
+  min-height: 12px;
+  padding-top: 22px;
+  padding-left: 46px;
+  padding-bottom: 22px;
+  padding-right: 14px;
+}
+
+.navigation-item:nth-child(2) {
+  min-width: 98px;
+  min-height: 12px;
+  padding-top: 22px;
+  padding-left: 46px;
+  padding-bottom: 22px;
+  padding-right: 76px;
+}
+
+.navigation-item:nth-child(3) {
+  min-width: 90px;
+  min-height: 10px;
+  padding-top: 22px;
+  padding-left: 17px;
+  padding-bottom: 24px;
+  padding-right: 46px;
+}
+
+.navigation-item:nth-child(4) {
+  min-width: 79px;
+  min-height: 12px;
+  padding-top: 22px;
+  padding-left: 28px;
+  padding-bottom: 22px;
+  padding-right: 46px;
+}
+
+.promotional {
+  width: 768px;
+  height: 512px;
+  padding: 0;
+  margin: 0;
+}
+
+.block-picture {
+  min-width: 768px;
+  min-height: 256px;
+}
+
+.reasons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.one-reason {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  background-color: #81b3d2;
+}
+
+.one-reason h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 21px;
+  line-height: 21px;
+}
+
+.one-reason p {
+  margin: 0;
+  padding: 0;
+}
+
+.picture-city {
+  min-width: 511px;
+  min-height: 256px;
+  /*position: absolute;
+  bottom: -310px;
+  left: 60%;*/
+}
+
+.additional-advantage-list {
+  display: flex;
+  justify-content: space-between;
+  
+  
+}
+
+.additional-advantage-item {
+  margin: 0;
+  padding: 0;
+}
+
+.another-reasons-list {
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  position: relative;
+  justify-content: space-between;
+}
+
+.another-reasons-item { 
+  margin: 0;
+  padding: 0;
+  
+}
+
+.picture-gorge {
+  /*position: absolute;
+  bottom: -30px;
+  right: 50%;*/
+}
+
+.main-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.additional-advantage-list {
+  list-style: none;
+}
+
+.additional-advantage-list {
+  text-align: center;
+  color: #333333;
+}
+
+.another-reasons-list {
+  list-style: none;
+  background-color: #ffffff;
+}
+
+.another-reasons-list {
+  text-align: center;
+  color: #333333;
+}
+
+.desire {
+  text-align: center;
+  color: #333333;
+}
+
+.desire-item input {
+  font: inherit;
+  background-color: #f2f2f2;
+}
+
+.desire-item input:hover {
+  background-color: #ebebeb;
+}
+
+.desire-item input:focus {
+  border-color: #e5e5e5;
+}
+
+.option-collating-list {
+  list-style: none;
+}
+
+.option-collating-list a {
+  color: #b2b2b2;
+  text-decoration: underline;
+}
+
+.option-collating-list a:hover,
+.option-collating-list a:focus {
+  color: #89b8d5;
+}
+
+.option-collating-list a:active {
+  color: #89b8d5;
+  text-decoration: none;
+}
+
+.filter fieldset {
+  border: none;
+}
+
+.filter legend {
+  font-size: 16px;
+  line-height: 21px;
+}
+.filter ul {
+  list-style: none;
+  line-height: 21px;
+}
+
+.filter-input:hover + label,
+.filter-input:focus + label {
+  color: #ffffff;
+}
+
+ .filter-input:disabled + label {
+  color: #6a6a6a;
+   opacity: 0.5;
+}
+
+.catalog-list {
+  list-style: none;
+}
+
+ .catalog-item {
+  background-color: #f8f8f8;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.catalog-item a {
+  color: #000000;
+}
+
+ .appellation {
+  font-size: 21px;
+  line-height: 26px;
+}
+
+.catalog-item-kind {
+  text-transform: none;
+}
+
+.catalog-item .button {
+  color: #ffffff;
+  background-color: #81b3d2;
+}
+
+.catalog-item .button-reservation {
+  color: #ffffff;
+  background-color: #766357;
+}
+
+ .main-footer {
+  color: #000000;
+
+  background-color: #f9fbf6;
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+
+.footer-social {
+  text-align: center;
+}
+
+ .footer-social ul {
+  list-style: none;
+}
+
+ .social-button {
+  color: #000000;
+}
+
+.footer-copyright {
+  text-align: center;
+}
+
+.footer-copyright a {
+  color: #000000;
+}
+
+ .footer-copyright .button:hover,
+.footer-copyright .button:focus {
+  color: #81b3d2;
+   background-color: #ffffff;
+}
+/*min-width: 177px;
+  min-height: 167px;
+  padding-top: 46px;
+  padding-left: 39px;
+  padding-bottom: 43px;
+  padding-right: 40px;/*
