--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,22 @@ a {
     text-decoration: none;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
-  clip: rect(0 0 0 0);
+
   width: 1px;
   height: 1px;
   margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .button {
@@ -281,6 +291,46 @@ a {
   padding-bottom: 32px;
 }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(-5px);
+  }
+
+  70% {
+    transform: translateY(0.5px);
+  }
+
+  90% {
+    transform: translateY(-0.5px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
 .modal {
   position:absolute;
   color: #000000;
@@ -293,7 +343,15 @@ a {
   min-height: 395px;
   padding-left: 54px;
   padding-right: 55px;
+  animation: bounce 0.6s;
+}
+
+.modal-search-form-show {
   display: none;
+}
+
+.modal-error {
+  animation: shake 0.6s;
 }
 
 .search-item {
@@ -367,7 +425,7 @@ a {
 .filter-input-checkbox[type="checkbox"] + .checkbox-indicator {
   position: absolute;
   top: 13;
-  left: 100px;
+  left: 97px;
 
   width: 17px;
   height: 17px;
@@ -474,7 +532,7 @@ a {
 
 .filter-button {
   position: absolute;
-  top: 145px;
+  top: 165px;
   left: 81%;
   background-color: transparent;
   border: 2px solid #ffffff;
