--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,7 @@ input[type="radio"].visually-hidden {
   position:absolute;
   color: #000000;
   background-color: #ffffff;
+  z-index: 3;
   }
 
 .modal-search-form {
@@ -352,6 +353,20 @@ input[type="radio"].visually-hidden {
 
 .modal-error {
   animation: shake 0.6s;
+}
+
+.map-block img {
+  position: absolute;
+  bottom: 7px;
+  z-index: 1;
+  margin: 0;
+}
+
+.map-block iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
 }
 
 .search-item {
